tests/baselines/reference/interfaceWithImplements1.errors.txt
tests/cases/compiler/interfaceWithImplements1.ts(3,16): error TS1176: Interface declaration cannot have 'implements' clause.


==== tests/cases/compiler/interfaceWithImplements1.ts (1 errors) ====
    interface IFoo { }
    
    interface IBar implements IFoo {
                   ~~~~~~~~~~
!!! error TS1176: Interface declaration cannot have 'implements' clause.
    }